# Gravitee-AI-Agent-Workshop

./: .env-template  .gitignore  AUTHORIZATION-TESTING-GUIDE.md  README.md  docker-compose.yml  start.sh
a2a-agent/: Dockerfile  pyproject.toml
a2a-agent/agent_server/: main.py
acme-hotel-api/: Dockerfile  openapi.yaml  pyproject.toml
acme-hotel-api/acme_hotel_api/: main.py
acme-hotel-api/acme_hotel_api/data/: bookings.yaml  hotels.yaml
acme-hotel-api/docs/: home-page.md  openapi.yaml
acme-hotel-website/: Dockerfile  config.js  docker-entrypoint.sh  index.html  nginx.conf  package.json  script.js  styles.css
agent-live-graph/: Dockerfile  package-lock.json  package.json  server.js
agent-live-graph/lib/: event-classifier.js  otel-receiver.js  protocol-detector.js  transaction-buffer.js  ws-broadcast.js
agent-live-graph/public/: app.js  index.html  styles.css
apim-apis-definitions/: Hotel-Booking-1-0.json  Hotel-Booking-AI-Agent-1-0.json  Hotel-Booking-API-1-0.json  LLM-Ollama-1-0.json  Ollama-LLM-1-0.json
assets/: architecture-diagram.excalidraw
currency-converter-a2a-agent/: Dockerfile  main.py  pyproject.toml
currency-converter-a2a-agent/agents/langgraph/: agent.py  pyproject.toml
currency-converter-a2a-agent/common/client/: card_resolver.py
currency-converter-a2a-agent/common/server/: server.py
docker/mcp-server/: Dockerfile  fastmcp-server.py
gravitee-init/: Dockerfile  README.md  am_init.py  apim_init.py  gravitee-api-management-openapi.yaml  main.py
gravitee-init/am-apps/: acme-hotel-agent.yaml  acme-hotel-website.yaml  gravitee-hotels.yaml  hotel-ai-agent.yaml  hotel-booking-agent.yaml
gravitee-init/am-mcp-servers/: hotel-booking-mcp.yaml
gravitee-init/apim-apis/: ACME-Currency-Converter-Agent-1-0.json  ACME-Hotels-AI-Agent-1-0.json  ACME-Hotels-API-1-0.json  ACME-Hotels-API-MCP-Server-1-0.json  ACME-Hotels-LLMs-1-0.json  ACME-Hotels-MCP-Proxy-1-0.json  Hotel-AI-Agent-1-0-0.json  Internal-ACME-Hotels-API-MCP-Server-1-0.json
gravitee-init/apim-apps/: acme-hotel-agent.yaml  hotel-ai-agent.yaml  hotel-booking-ai-agent.yaml
gravitee-init/apim-subscriptions/: acme-hotel-agent-subscriptions.yaml  hotel-ai-agent-subscriptions.yaml  hotel-booking-agent-subscriptions.yaml
gravitee-init/openfga/: openfgastore.yaml
hotel-agent/: Dockerfile  pyproject.toml
hotel-agent/agent/: auth_service.py  llm_client.py  main.py  mcp_client.py
hotel-booking-a2a-agent/: Dockerfile  pyproject.toml
hotel-booking-a2a-agent/agent/: auth_service.py  llm_client.py  logger.py  main.py  mcp_client.py
hotel-booking-a2a-agent/agent-server/: __init__.py  a2a_client.py  auth_service.py  colored_logger.py  main.py
hotel-booking-a2a-agent/agent_server/: auth_service.py  main.py
hotel-booking-a2a-agent/llm-client/: pyproject.toml
hotel-booking-a2a-agent/llm-client/llm-client/: main.py
hotel-booking-a2a-agent/mcp-client/: pyproject.toml
hotel-booking-a2a-agent/mcp-client/mcp-client/: main.py
hotel-booking-api/: Dockerfile  hotel-booking-1-0.yaml  pyproject.toml  readme.md
hotel-booking-api/hotel_booking_api/: __init__.py  accommodations.json  bookings.json  main.py
hotel-website/: Dockerfile  config.js  docker-entrypoint.sh  index.html  package.json  script.js  styles.css
llm-client/: Dockerfile  pyproject.toml
llm-client/llm_client/: __init__.py  main.py
mcp-client/: Dockerfile  pyproject.toml
mcp-client/mcp_client/: main.py
openfga/: openfgastore.yaml
openfga/scripts/: bootstrap-openfga.sh
