[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "acme-hotel-api"
version = "1.0.0"
description = "ACME Hotel API — hotel search and booking management"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.135.0",
  "uvicorn>=0.44.0",
  "pydantic>=2.12.0",
  "pyyaml>=6.0.3",
  "email-validator>=2.3.0",
]

[project.scripts]
acme-hotel-api = "acme_hotel_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["acme_hotel_api"]

[tool.hatch.build.targets.wheel.force-include]
"acme_hotel_api/data" = "acme_hotel_api/data"
