[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hotel-agent"
version = "1.0.0"
description = "ACME Hotel Booking Agent — manages hotel search and reservations via MCP tools"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk[sql]>=1.0.0a0",
  "packaging",
  "mcp",
  "openai",
  "python-dotenv",
  "httpx",
  "uvicorn",
]

[project.scripts]
hotel-agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]
