[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "hotel-agent"
version = "1.0.0"
description = "ACME Hotel Booking Agent — manages hotel search and reservations via MCP tools"
requires-python = ">=3.14"
dependencies = [
  "a2a-sdk[sql]==1.0.1",
  "packaging==26.1",
  "mcp==1.27.0",
  "openai==2.32.0",
  "python-dotenv==1.2.2",
  "httpx==0.28.1",
  "uvicorn==0.45.0",
]

[project.scripts]
hotel-agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]
