[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hotel-booking-a2a-agent"
version = "0.1.0"
description = "Hotel Booking A2A Agent Server using MCP tools for booking management"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk",
  "mcp",
  "ollama",
  "python-dotenv",
  "httpx",
  "uvicorn",
  "pyjwt",
]
[project.scripts]
hotel-booking-a2a-agent = "agent_server.main:main"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["agent-server", "llm-client", "mcp-client"]
