[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "a2a-agent"
version = "1.0.0"
description = "Generic A2A Agent that discovers and uses MCP tools"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk",
  "mcp",
  "openai",
  "python-dotenv",
  "httpx",
  "uvicorn",
]

[project.scripts]
a2a-agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]
