[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hotel_booking_api"
version = "0.1.0"
description = "Hotel Booking API with MCP server support"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "mcp>=1.13.1",
]

[project.scripts]
hotel-api = "hotel_booking_api.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hotel_booking_api"]
