[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp_client"
version = "0.1.0"
description = "MCP client for discovering and calling tools from MCP servers"
requires-python = ">=3.12"
dependencies = [
  "mcp",
  "python-dotenv",
  "httpx",
]

[project.scripts]
mcp-client = "mcp_client.main:main"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_client"]
